# trading-bot

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
apps/backtester/: broker_validation_dashboard.py  broker_validation_remediation.py  broker_validation_triage.py  pnl_report.py  (+18 more)
config/: assets_whitelist.yaml  risk_policy.yaml  settings.yaml
docs/: BACKLOG.md  IMPLEMENTATION_STATUS.md  JIRA_STATUS.md  deployment-webhook-hardening.md  governance-deployment-checklist.md  runbooks.md  webhook-cutover-checklist.md
tests/: test_agent_comms.py  test_agent_contracts.py  test_agent_dlq.py  test_agentic_supervisor.py  test_approval_gate.py  test_approval_request_id.py  test_audit_log.py  test_automation_policy.py  test_callback_store.py  test_callback_store_retry.py  test_config.py  test_decisions.py  test_drift_agent.py  test_execution_errors.py  test_execution_router.py  test_governance_apply_guardrails.py  test_governance_approval_workflow.py  test_governance_autoticket.py  test_governance_drift_ack.py  test_governance_emergency_multisig.py  test_governance_emergency_override.py  test_governance_ledger.py  test_governance_reconciliation.py  test_governance_signoff.py  test_guardrails.py  test_idempotency_key.py  test_kpi_report.py  test_learning_agent.py  test_live_dry_run.py  test_news_normalizer.py  test_orchestrator.py  test_order_validation_matrix.py  test_pnl_engine.py  test_pnl_multicurrency.py  test_pnl_report.py  test_pnl_snapshots.py  test_policy_simulation.py  test_portfolio_fx.py  test_portfolio_ledger.py  test_questrade_auth.py  (+26 more)
(+131 files in other folders)
